--- a/pollAndPrediction.html
+++ b/pollAndPrediction.html
@@ -125,6 +125,7 @@ $(document).ready(function () {
 </div>
 
 
+<p>To do: 1.Change regressions into charts 2.Do a bump chart for the rank changes in different specification</p>
 <div id="sample-selection" class="section level2">
 <h2>Sample Selection</h2>
 <p>我選取了 2010, 2012, 2014, 2016, 2018 五次大選中，總統選舉及直轄市長的民意調查。 資料中總共有 2144 個候選人民調數據，有 59 個不同的民調資料來源。</p>
@@ -694,6 +695,411 @@ pander(dtAbsError)</code></pre>
 <td align="center">台灣指標</td>
 <td align="center">10.06</td>
 <td align="center">1.157</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div class="section level3">
+<h3>有沒有機構效應？</h3>
+<pre class="r"><code>fit &lt;- lm(data = dtSample[zhParty %in% c(&quot;民主進步黨&quot;,&quot;中國國民黨&quot;),],
+    formula = Error ~ 0 + Institute + Institute*zhParty + zhParty + preDate + Election)
+
+pander(fit,add.significance.stars = TRUE)</code></pre>
+<table style="width:100%;">
+<caption>Fitting linear model: Error ~ 0 + Institute + Institute * zhParty + zhParty + preDate + Election (continued below)</caption>
+<colgroup>
+<col width="56%"></col>
+<col width="14%"></col>
+<col width="16%"></col>
+<col width="12%"></col>
+</colgroup>
+<thead>
+<tr class="header">
+<th align="center"> </th>
+<th align="center">Estimate</th>
+<th align="center">Std. Error</th>
+<th align="center">t value</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="center"><strong>InstituteTVBS</strong></td>
+<td align="center">-0.4024</td>
+<td align="center">0.8234</td>
+<td align="center">-0.4887</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute世新大學</strong></td>
+<td align="center">0.4364</td>
+<td align="center">1.238</td>
+<td align="center">0.3524</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute中國時報</strong></td>
+<td align="center">-0.4128</td>
+<td align="center">0.8195</td>
+<td align="center">-0.5037</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute台灣指標</strong></td>
+<td align="center">3.736</td>
+<td align="center">1.696</td>
+<td align="center">2.203</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute山水</strong></td>
+<td align="center">1.505</td>
+<td align="center">1.865</td>
+<td align="center">0.8071</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute年代</strong></td>
+<td align="center">3.429</td>
+<td align="center">1.845</td>
+<td align="center">1.858</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute東森</strong></td>
+<td align="center">4.496</td>
+<td align="center">1.653</td>
+<td align="center">2.72</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute民主進步黨</strong></td>
+<td align="center">1.531</td>
+<td align="center">1.408</td>
+<td align="center">1.087</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute決策</strong></td>
+<td align="center">4.894</td>
+<td align="center">2.261</td>
+<td align="center">2.164</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute美麗島</strong></td>
+<td align="center">8.02</td>
+<td align="center">2.135</td>
+<td align="center">3.756</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute聯合報</strong></td>
+<td align="center">-2.045</td>
+<td align="center">1.06</td>
+<td align="center">-1.929</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute自由時報</strong></td>
+<td align="center">6.323</td>
+<td align="center">1.191</td>
+<td align="center">5.311</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute蘋果日報</strong></td>
+<td align="center">-1.654</td>
+<td align="center">1.278</td>
+<td align="center">-1.294</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute趨勢</strong></td>
+<td align="center">3.411</td>
+<td align="center">1.31</td>
+<td align="center">2.603</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>zhParty民主進步黨</strong></td>
+<td align="center">1.365</td>
+<td align="center">0.9631</td>
+<td align="center">1.417</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>preDate</strong></td>
+<td align="center">0.003032</td>
+<td align="center">0.002963</td>
+<td align="center">1.023</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Election2012 Election</strong></td>
+<td align="center">4.639</td>
+<td align="center">0.694</td>
+<td align="center">6.684</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Election2014 Election</strong></td>
+<td align="center">-0.3812</td>
+<td align="center">0.6916</td>
+<td align="center">-0.5513</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Election2016 Election</strong></td>
+<td align="center">0.04677</td>
+<td align="center">0.91</td>
+<td align="center">0.0514</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Election2018 Election</strong></td>
+<td align="center">-0.0334</td>
+<td align="center">0.7884</td>
+<td align="center">-0.04236</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute世新大學:zhParty民主進步黨</strong></td>
+<td align="center">-2.115</td>
+<td align="center">1.917</td>
+<td align="center">-1.103</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute中國時報:zhParty民主進步黨</strong></td>
+<td align="center">-0.6075</td>
+<td align="center">1.3</td>
+<td align="center">-0.4672</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute台灣指標:zhParty民主進步黨</strong></td>
+<td align="center">-5.348</td>
+<td align="center">2.454</td>
+<td align="center">-2.18</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute山水:zhParty民主進步黨</strong></td>
+<td align="center">-2.84</td>
+<td align="center">2.628</td>
+<td align="center">-1.081</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute年代:zhParty民主進步黨</strong></td>
+<td align="center">-5.821</td>
+<td align="center">2.698</td>
+<td align="center">-2.157</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute東森:zhParty民主進步黨</strong></td>
+<td align="center">-6.4</td>
+<td align="center">2.312</td>
+<td align="center">-2.768</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute民主進步黨:zhParty民主進步黨</strong></td>
+<td align="center">-3.901</td>
+<td align="center">2.183</td>
+<td align="center">-1.787</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute決策:zhParty民主進步黨</strong></td>
+<td align="center">-8.084</td>
+<td align="center">3.189</td>
+<td align="center">-2.535</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute美麗島:zhParty民主進步黨</strong></td>
+<td align="center">-6.042</td>
+<td align="center">2.957</td>
+<td align="center">-2.043</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute聯合報:zhParty民主進步黨</strong></td>
+<td align="center">4.733</td>
+<td align="center">1.678</td>
+<td align="center">2.821</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute自由時報:zhParty民主進步黨</strong></td>
+<td align="center">-13.07</td>
+<td align="center">1.874</td>
+<td align="center">-6.979</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute蘋果日報:zhParty民主進步黨</strong></td>
+<td align="center">3.116</td>
+<td align="center">2.029</td>
+<td align="center">1.536</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute趨勢:zhParty民主進步黨</strong></td>
+<td align="center">-5.546</td>
+<td align="center">1.968</td>
+<td align="center">-2.818</td>
+</tr>
+</tbody>
+</table>
+<table style="width:88%;">
+<colgroup>
+<col width="61%"></col>
+<col width="16%"></col>
+<col width="9%"></col>
+</colgroup>
+<thead>
+<tr class="header">
+<th align="center"> </th>
+<th align="center">Pr(&gt;|t|)</th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="center"><strong>InstituteTVBS</strong></td>
+<td align="center">0.6252</td>
+<td></td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute世新大學</strong></td>
+<td align="center">0.7246</td>
+<td></td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute中國時報</strong></td>
+<td align="center">0.6146</td>
+<td></td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute台灣指標</strong></td>
+<td align="center">0.02782</td>
+<td>*</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute山水</strong></td>
+<td align="center">0.4198</td>
+<td></td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute年代</strong></td>
+<td align="center">0.06342</td>
+<td></td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute東森</strong></td>
+<td align="center">0.00663</td>
+<td>* *</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute民主進步黨</strong></td>
+<td align="center">0.2773</td>
+<td></td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute決策</strong></td>
+<td align="center">0.03064</td>
+<td>*</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute美麗島</strong></td>
+<td align="center">0.000182</td>
+<td>* * *</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute聯合報</strong></td>
+<td align="center">0.05398</td>
+<td></td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute自由時報</strong></td>
+<td align="center">1.32e-07</td>
+<td>* * *</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute蘋果日報</strong></td>
+<td align="center">0.1959</td>
+<td></td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute趨勢</strong></td>
+<td align="center">0.009371</td>
+<td>* *</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>zhParty民主進步黨</strong></td>
+<td align="center">0.1567</td>
+<td></td>
+</tr>
+<tr class="even">
+<td align="center"><strong>preDate</strong></td>
+<td align="center">0.3064</td>
+<td></td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Election2012 Election</strong></td>
+<td align="center">3.678e-11</td>
+<td>* * *</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Election2014 Election</strong></td>
+<td align="center">0.5816</td>
+<td></td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Election2016 Election</strong></td>
+<td align="center">0.959</td>
+<td></td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Election2018 Election</strong></td>
+<td align="center">0.9662</td>
+<td></td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute世新大學:zhParty民主進步黨</strong></td>
+<td align="center">0.2701</td>
+<td></td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute中國時報:zhParty民主進步黨</strong></td>
+<td align="center">0.6404</td>
+<td></td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute台灣指標:zhParty民主進步黨</strong></td>
+<td align="center">0.0295</td>
+<td>*</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute山水:zhParty民主進步黨</strong></td>
+<td align="center">0.2801</td>
+<td></td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute年代:zhParty民主進步黨</strong></td>
+<td align="center">0.0312</td>
+<td>*</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute東森:zhParty民主進步黨</strong></td>
+<td align="center">0.005734</td>
+<td>* *</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute民主進步黨:zhParty民主進步黨</strong></td>
+<td align="center">0.07418</td>
+<td></td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute決策:zhParty民主進步黨</strong></td>
+<td align="center">0.01137</td>
+<td>*</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute美麗島:zhParty民主進步黨</strong></td>
+<td align="center">0.0413</td>
+<td>*</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute聯合報:zhParty民主進步黨</strong></td>
+<td align="center">0.004868</td>
+<td>* *</td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute自由時報:zhParty民主進步黨</strong></td>
+<td align="center">5.128e-12</td>
+<td>* * *</td>
+</tr>
+<tr class="even">
+<td align="center"><strong>Institute蘋果日報:zhParty民主進步黨</strong></td>
+<td align="center">0.1248</td>
+<td></td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Institute趨勢:zhParty民主進步黨</strong></td>
+<td align="center">0.004919</td>
+<td>* *</td>
 </tr>
 </tbody>
 </table>
